<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:text="@string/category_add_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/category_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/category_add_name"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/category_add_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/category_add_image"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/category_add_image"
            android:text="@string/category_image_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/selected_image"
            android:scaleType="centerCrop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/save_category_button"
            android:text="@string/category_add"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</ScrollView>
