<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TimePicker"
    android:background="@color/black">

    <TextView
        android:id="@+id/timePickerText"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/timePickerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/timer_icon"
        android:layout_below="@+id/timePickerText"
        android:layout_above="@+id/timePickerButton"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/TimePickerButtonText"
        android:id="@+id/timePickerButton"
        android:onClick="onClick"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/timePickerNextButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/TimePickerNextText"/>



</RelativeLayout>
